--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
   <meta charset="utf-8">
   <title>OrdgenLabs</title>
   <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1'>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <div id="react-root"></div>
