--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <head>
   <meta name="fragment" content="!">
   <meta charset="utf-8">
-  <title>OrdgenLabs</title>
+  <title>Wallville Decor</title>
   <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1'>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
