--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,25 @@
   <meta name="fragment" content="!">
   <meta charset="utf-8">
   <title>Wallville Decor</title>
+  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/favicon-194x194.png" sizes="194x194">
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/png" href="/android-icon-36x36.png" sizes="36x36">
+  <link rel="icon" type="image/png" href="/android-icon-48x48.png" sizes="48x48">
+  <link rel="icon" type="image/png" href="/android-icon-72x72.png" sizes="72x72">
+  <link rel="icon" type="image/png" href="/android-icon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/png" href="/android-icon-144x144.png" sizes="144x144">
+  <link rel="icon" type="image/png" href="/android-icon-192x192.png" sizes="192x192">
+  <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
   <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1'>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
