--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,7 @@
   <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
   <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1'>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
 </head>
 <body>
   <div id="react-root"></div>
